<resources>
    <string name="app_name">RAIN2</string>
    <string name="toast_ble_not">BLE_NOT_SUPPORT</string>
    <string name="activity_title_search">Bluetooth</string>
    <string name="text_view_bound">Paired devices</string>
    <string name="text_view_search">Available devices</string>
    <string name="action_search">REFRESH</string>
    <string name="bt_bond_ing">Pairing...</string>

    <string name="tab_inventory">Inventory</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_access">Tag Access</string>
    <string name="tab_barcode">Bar code</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_stop">Stop</string>
    <string name="button_clear">Clear</string>
    <string name="text_view_version">App version：%1$s\tFirm version：%2$s</string>
    <string name="toast_inventory_start">Inventorying...</string>
    <string name="toast_inventory_stop">Inventory stopped</string>
    <string name="text_view_unique">Unique : %1$d tag(s)</string>
    <string name="text_view_speed">Speed : %1$d tag(s)/s</string>
    <string name="text_view_power">Power</string>
    <string name="text_view_anti">Anti-Collision</string>
    <string name="radio_fixed">Fixed Q</string>
    <string name="radio_dynamic">Dynamic Q</string>
    <string name="text_view_start">Start Q</string>
    <string name="text_view_max">Max Q</string>
    <string name="text_view_min">Min Q</string>
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>
    <string name="text_view_region">Region</string>
    <string name="text_view_channel">Channel</string>
    <string name="button_save">Update Registry</string>
    <string name="toast_get_success">GET_SUCCESS</string>
    <string name="toast_get_failed">GET_FAILED</string>
    <string name="toast_set_success">SET_SUCCESS</string>
    <string name="toast_set_failed">SET_FAILED</string>
    <string name="toast_select">Selected</string>
    <string name="toast_deselect">Deselected</string>
    <string name="toast_select_failed">Select failed</string>
    <string name="toast_deselect_failed">Deselect failed</string>
    <string name="toast_read_success">READ_SUCCESS</string>
    <string name="toast_read_failed">READ_FAILED</string>
    <string name="toast_write_success">WRITE_SUCCESS</string>
    <string name="toast_write_failed">WRITE_FAILED</string>
    <string name="toast_lock_success">LOCK_SUCCESS</string>
    <string name="toast_lock_failed">LOCK_FAILED</string>
    <string name="toast_kill_success">KILL_SUCCESS</string>
    <string name="toast_kill_failed">KILL_FAILED</string>
    <string name="toast_access_error">Access password required</string>
    <string name="toast_start_error">Start address required</string>
    <string name="toast_length_error">Read/Write length required</string>
    <string name="toast_epc_error">EPC required</string>
    <string name="toast_kill_error">Kill password required</string>
    <string-array name="array_select">
        <item>Select this tag</item>
        <item>Deselect tag</item>
    </string-array>

    <string name="text_view_barcode">BARCODE</string>
    <string name="text_view_count">COUNT</string>
    <string name="button_scan">SCAN</string>

    <string name="title_info">Info</string>
    <string name="title_uhf">UHF</string>
    <string name="title_barcode">Scan</string>

    <string name="action_search_bt">SEARCH</string>
    <string name="dialog_initialize">Initializing...</string>
    <string name="toast_inventory">Inventorying...</string>
    <string name="dialog_connect">Connecting...</string>
    <string name="toast_inventory_end">Inventory stopped</string>
    <string name="dialog_reconnect">Connection failed or disconnected, reconnect?</string>
    <string name="dialog_title">Note</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="dialog_button_reconnect">RECONNECT</string>
    <string name="upgrade_failed">Upgrade failed</string>
    <string name="upgrade_success">Upgrade success</string>

    <string name="text_view_cpy">MTI CMCID Foxconn Technology Group</string>

</resources>
