<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ffffff"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/text_view_region"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_region"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/button_region_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get" />

        <Button
            android:id="@+id/button_region_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_set" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/text_view_channel"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_channel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/button_channel_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get" />

        <Button
            android:id="@+id/button_channel_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_set" />
    </LinearLayout>
</LinearLayout>